rest-service-chart/templates/redis-service.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: test-redis-service
  name: test-redis-service
spec:
  ports:
  - name: tcp
    port: 6379
    protocol: TCP
    targetPort: 6379
  sessionAffinity: None
  type: ClusterIP
  selector:
    app: test-redis
