rest-service-chart/templates/ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  annotations:
    kubernetes.io/ingress.class: nginx
  name: test-ingress
spec:
  rules:
   - http:
       paths:
       - backend:
           serviceName: test-service
           servicePort: 8080
         path: /greeting
